# SyntheticCrimeReport

./: README.md  generate_report.ipynb  hello.py  pyproject.toml
chicago_report/: chicago_crime.json
niem_chicago_output/: chicago_crime_niem.xml
synthetic_output/: crime_reports.xml
visualizations/: chicago_niem_structure  synthetic_niem_structure
